Fixed alignment on second text box.

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ p {
 }
 
 .ABT-2 {
-    left: 100vh;
+    left: 50%;
 }
 
 /* Background images for parallax scrolling divs. */
